Change title from serious one

--- a/urand.tex
+++ b/urand.tex
@@ -19,7 +19,7 @@
 
 \markboth{Robert J. Simmons}{Reconstructing polarity and exponentials}
 
-\title{Reconstructing polarity and exponentials}
+\title{A modest proposal for the purity of programming}
 \author{Robert J. Simmons \and Tom Murphy VII}
 
 \begin{abstract}
