Remove irrelevant keywords

--- a/urand.tex
+++ b/urand.tex
@@ -30,9 +30,7 @@ We propose a foundation
             
 \terms{Algorithms, Design, Theory, Verification} 
             
-\keywords{intuitionstic logic, polarized logic,
-cut admissibility, identity expansion, normalization, focusing,
-proof search}
+\keywords{}
 
 \begin{document}
 
