Abstract, it's crappy now

--- a/urand.tex
+++ b/urand.tex
@@ -23,12 +23,27 @@
 \author{Robert J. Simmons \and Tom Murphy VII}
 
 \begin{abstract}
-We propose a foundation
+  Terrible ideas permeate the world of programming languages, and the
+  harm that these ideas do is lasting. Academic research is intended
+  to ameloriate some of this harm, but the connection between academic
+  PL research and industry grows ever more tenuous. This harms both
+  realms. Terrible ideas continue to hold back the benefits that
+  computer science and software enginnering seek to bring to the
+  world.  On the other side, we should not the demoralizing effect of
+  this tendency on academic PL research: why work on ``practical''
+  research if you will be universally ignored?
+
+  The more principled among us might suggest that we continue to
+  generate the best ideas and see what happens, that the right ideas
+  will win in time. The time for such velvet-glove approaches is long
+  past. This is a war, and it is time to use all the resources at our
+  disposal. We propose a method and apparatus to save the world from
+  itself.
 \end{abstract}
 
 \category{F.4.1}{Theory of Computation}{Mathematical Logic}[Proof theory]
             
-\terms{Algorithms, Design, Theory, Verification} 
+\terms{} 
             
 \keywords{}
 
