--- a/urand.tex
+++ b/urand.tex
@@ -17,7 +17,7 @@
 \newcommand{\stableL}[1]{{#1}\,\mathit{stable_L} \mathstrut}
 \newcommand{\one}{{\bf 1}}
 
-\markboth{Robert J. Simmons}{Reconstructing polarity and exponentials}
+\markboth{Robert J. Simmons, {\it et al.}}{A modest proposal for the purity of programming}
 
 \title{A modest proposal for the purity of programming}
 \author{Robert J. Simmons \and Tom Murphy VII}
@@ -29,7 +29,7 @@
   PL research and industry grows ever more tenuous. This harms both
   realms. Terrible ideas continue to hold back the benefits that
   computer science and software enginnering seek to bring to the
-  world.  On the other side, we should not the demoralizing effect of
+  world.  On the other side, we should note the demoralizing effect of
   this tendency on academic PL research: why work on ``practical''
   research if you will be universally ignored?
 
@@ -52,5 +52,33 @@
 \maketitle
 
 Da da da
+
+\section{Introduction}
+
+Why are programming langauges important? Why are they broken? What is our approach to fixing it?
+
+How does patent law work, and how does it allow us to stomp out bullshit?
+
+Examples of history: SIGBOVIK/Milner idea
+
+- different levels of patent from rock solid to pure troll-threats
+
+We are going up against some of the biggest companies in the world, such as Larry Wall and Guido van Rossum.
+
+The chillaxing effect
+
+\section{Examples}
+
+tom
+
+\section{The /dev/urand Foundation}
+
+tom
+
+UnReasonable and Not-not Discriminatory
+
+\section{Lawsuits are coming}
+
+languages that we are coming after
 
 \end{document}
