Some nonsense in the intro

--- a/urand.tex
+++ b/urand.tex
@@ -51,21 +51,43 @@
 
 \maketitle
 
-Da da da
-
 \section{Introduction}
 
 Why are programming langauges important? Why are they broken? What is our approach to fixing it?
 
+\subsection{Primer on patent law}
+
+Patent law is 
+
 How does patent law work, and how does it allow us to stomp out bullshit?
 
-Examples of history: SIGBOVIK/Milner idea
+\subsubsection{Unreasonable and non-discriminatory terms}
+
+Standards bodies require member organizations to adhere to the mostly
+ill-defined requirement of using {\it reasonable and
+  non-discriminatory terms}, RAND for short, for any and all patents
+owned by those organizations that pertain to the standard.
+
+To see why this is important, consider a standards body with
+representatives from 57 companies all working on a new standard for
+Carrier Pidgeon Message Formatting modernizing RFC 1149. BBN Labs has
+a new patent on avian foot massage technology \cite{ebert}, and without
+revealing this fact to the consortium they incorporate the requirement
+to 
+
+\subsection{Base coat on patent trolls}
 
 - different levels of patent from rock solid to pure troll-threats
 
 We are going up against some of the biggest companies in the world, such as Larry Wall and Guido van Rossum.
 
-The chillaxing effect
+\subsubsection{The chillaxing effect}
+
+\subsection{Shellac on lost opportunities}
+
+
+Examples of history: SIGBOVIK/Milner idea
+
 
 \section{Examples}
 
@@ -80,5 +102,22 @@ UnReasonable and Not-not Discriminatory
 \section{Lawsuits are coming}
 
 languages that we are coming after
+
+
+\begin{thebibliography}{1}
+
+
+\bibitem{ebert}
+Ebert, Michael A.
+\newblock ``Corrugated recreational device for pets.''
+\newblock Patent Application 11/757,456.
+\newblock Filed June 4, 2007.
+
+\bibitem{simmons10}
+Simmons, Robert J., Nels E. Beckman, and Dr. Tom Murphy VII, Ph.D.
+\newblock ``Functional Perl: Programming with Recursion Schemes in Python.''
+\newblock In {\it SIGBOVIK 2010}.
+
+\end{thebibliography}
 
 \end{document}
