--- a/urand.tex
+++ b/urand.tex
@@ -208,10 +208,10 @@ tape, or isomorphic representation). The claims are as follows:
 5.\quad The method of claim 4 where the state is the same object, or some property therein
 
 6.\quad The methods of claims 1--5 where the apparatus of attachment is reference \\
-6.a.\quad Reference by pointer \\
-6.b.\quad Reference by index \\
-6.c.\quad Reference by symbolic identifier \\
-6.c.\quad Representations isomorphic to those in claims 6.a.--6.c.
+\qquad 6.a.\quad Reference by pointer \\
+\qquad 6.b.\quad Reference by index \\
+\qquad 6.c.\quad Reference by symbolic identifier \\
+\qquad 6.c.\quad Representations isomorphic to those in claims 6.a.--6.c.
 
 
 
