--- a/urand.tex
+++ b/urand.tex
@@ -1,6 +1,8 @@
 \documentclass[acmtocl]%{acmtrans2m}%
 {boviktrans}
 
+\sloppypar
+
 \usepackage{dashrule}
 \usepackage{amssymb}
 \usepackage{amsmath}
