--- a/urand.tex
+++ b/urand.tex
@@ -246,16 +246,47 @@ representation). The claims are as follows:
 
 {\it (etc.)}
 
+It is hard to imagine any programming language that would not be
+covered by both of these patents. Many perfectly sensible languages
+would be impacted as well, but this is not a problem: We can choose to
+license the patent to languages that we judge to be tasteful, perhaps
+imposing additional contractual restrictions on the licensees, even
+regarding things not covered by our patent pool. We can easily
+develop hundreds of such applications and again use the stochastic
+method to ensure a high likelihood of having one granted.
+
 \section{The /dev/urand Foundation}
 
-tom
+The patents shall be administered by a new non-profit foundation,
+known as the /dev/urand Foundation. The organization is named for the
+RAND concept of patent licensing, required by many standard-setting
+organizations. These bodies allow for patented technologies to be used
+in standards, but require that the patent holder provide {\bf
+  R}easonable {\bf a}nd {\bf N}on-{\bf D}iscriminatory licensing
+options. This is to ensure that anyone can implement the standard, by
+paying a fair licensing fee to the patent holder until the patent
+expries, and is generally good for technology.
 
-UnReasonable and Not-not Discriminatory
+The /dev/urand Foundation differs in that its licensing is {\bf
+  U}n{\bf r}easonable {\bf a}nd {\bf N}ot-not {\bf D}iscriminatory:
+We do not 
+
+The point is to strike fear into the hearts of would-be hobbyists and
+academics, with the expectation that this would be generally {\it bad}
+for the programming language ecosystem, which we can all agree is
+pretty much up shit's creek without a paddle.
+
 
 \section{Lawsuits are coming}
 
 languages that we are coming after
 
+
+\section{Conclusion}
+
+We have presented a plan for saving programming from the scourge of clumsy innovation. 
+... HERE ...
+The future of programming depends on it!
 
 \begin{thebibliography}{1}
 
