--- a/urand.tex
+++ b/urand.tex
@@ -55,13 +55,50 @@
 
 \section{Introduction}
 
-Why are programming langauges important? Why are they broken? What is our approach to fixing it?
+Programming langauges are fundamentally structured expressions of
+human thought; they allow mere mortal humans like you and I to wield
+the power of the fantastically complex and powerful computing devices
+that live in our phones, coffee machines, and MacBooks. Like most
+other human enterprises, however,
+
+Why are programming langauges important? Why are they broken? What is
+our approach to fixing it?
 
 \subsection{Primer on patent law}
 
-Patent law is 
+Patent law in the United States traces back to Article 1, Section 8 of
+the United States Constitution, which gives Congress the power ``to
+promote the Progress of Science and useful Arts, by securing for
+limited Times to Authors and Inventors the exclusive Right to their
+respective Writings and Discoveries.'' This is the same portion of the
+constitution that copyright law stems from; however, in their core
+functionality patent law and copyright law are quite
+different. Patents are particularly unusual in the degree of
+exclusivity they give: a patent gives the holder a {\it monopoly} over
+the exercise of their patent for a period of time. Under current U.S.
+law, this period of time extends 20 years from the date when the
+patent was officially filed.
 
-How does patent law work, and how does it allow us to stomp out bullshit?
+One view of the patent system is that it is a deal the public makes
+with an inventor. Patents must provide enough information so that a
+skilled person can carry out the claimed invention -- this is called
+the {\it sufficiency of disclosure} requirement.  So, a patent gives
+you 20 years when you have absolute control over who is allowed to use
+your invention, but this awesome power comes at a cost -- you
+basically guarantee that, in 20 years, everybody is going to be able
+to use your invention. Furthermore, because patents are published
+right away, you give everybody else a head start on innovating further
+based on your ideas -- and if someone else comes with an innovation
+that's awesome enough, they can get a brand new patent that {\it you}
+can't use. And Science advances!  If you don't want to give your good
+ideas to anybody else right away and/or if you think you could keep
+your awesome secret a secret for more than 20 years, then it's to your
+advantage as an inventor {\it not} to make this trade, and have your
+invention be a trade secret rather than a patented invention.
+
+That, at least, is the civics book lesson for how patents work, but the
+patent system has had some difficulties coping with the complex nature
+technological innovation in the modern world. 
 
 \subsubsection{Unreasonable and non-discriminatory terms}
 
