okay, basic stab at my sections

--- a/urand.tex
+++ b/urand.tex
@@ -268,12 +268,20 @@ paying a fair licensing fee to the patent holder until the patent
 expries, and is generally good for technology.
 
 The /dev/urand Foundation differs in that its licensing is {\bf
-  U}n{\bf r}easonable {\bf a}nd {\bf N}ot-not {\bf D}iscriminatory:
-We do not 
+  U}n{\bf r}easonable {\bf a}nd {\bf N}ot-not {\bf D}iscriminatory: We
+do not offer licenses for any amount of money or other consideration.
+Our patents on bad ideas will simply never be licensed, enjoining
+anyone from using those ideas. Our overbroad patents will be licensed
+in a blatantly discriminatory fashion, only to languages that we think
+are tasteful. We might even withhold licenses when an individual has
+done something that we just don't like, like has a name that's hard to
+spell, or didn't accept one of our papers to a prestigious
+conference. This is totally legal.
 
 The point is to strike fear into the hearts of would-be hobbyists and
 academics, with the expectation that this would be generally {\it bad}
 for the programming language ecosystem, which we can all agree is
+% Rob: some kind of pun here instead?
 pretty much up shit's creek without a paddle.
 
 
