--- a/urand.tex
+++ b/urand.tex
@@ -153,7 +153,6 @@ As a demonstration, this section contains a list of bad programming language
 ideas that we came up with, no sweat. Cringe away:
 
 \begin{enumerate}
-\item A programming language where everything is
 \item The input programs are written as recipes
 \item You just give examples of what a function should do in certain circumstances, and when it encounters an input that is not specified it\ldots
   \begin{enumerate}
@@ -186,6 +185,9 @@ ideas that we came up with, no sweat. Cringe away:
      \item \ldots mutex
      \item \ldots non-uniform rational b-spline
    \end{enumerate}
+\item Programming languages for children or the elderly
+\item Programming languages based on telling stories
+\item Programming languages based on architecture, org charts, military strategy, or airplanes
 \item Instead of stack-based control-flow, use queue-based, tree-based, dataflow-network-based
 \item 4/3 CPS
 \item Every value is represented as the 256-bit content hash; elimination forms are distributed hashtable lookups; revision control is built into the concrete syntax of the language
