--- a/urand.tex
+++ b/urand.tex
@@ -61,7 +61,11 @@ Programming langauges are fundamentally structured expressions of
 human thought; they allow mere mortal humans like you and I to wield
 the power of the fantastically complex and powerful computing devices
 that live in our phones, coffee machines, and MacBooks. Like most
-other human enterprises, however,
+other human enterprises, programming languages are subject to fad and
+whim and fashion. {\it Unlike} most other human enterprises, the
+damage done by ill-considered ideas can be exceptionally lasting. We
+will seriosuly be stuck with Java's covariant arrays until the heat
+death of the universe.
 
 Why are programming langauges important? Why are they broken? What is
 our approach to fixing it?
