Global spell check

--- a/urand.tex
+++ b/urand.tex
@@ -55,18 +55,38 @@
 
 \section{Introduction}
 
-Programming langauges are fundamentally structured expressions of
+Programming languages are fundamentally structured expressions of
 human thought; they allow mere mortal humans like you and I to wield
 the power of the fantastically complex and powerful computing devices
 that live in our phones, coffee machines, and MacBooks. Like most
 other human enterprises, programming languages are subject to fad and
 whim and fashion. {\it Unlike} most other human enterprises, the
-damage done by ill-considered ideas can be exceptionally lasting. We
-will seriosuly be stuck with Java's covariant arrays until the heat
-death of the universe.
+damage done by ill-considered ideas can be exceptionally lasting if
+the languages incorporating these ideas are used to build big
+important systems. If you dislike covariant generics, you should mourn
+that we will seriously be stuck with Java's covariant arrays until the
+heat death of the universe. If you {\it do} like covariant generics,
+you are wrong, but nevertheless you should mourn that we will
+seriously be stuck with Java's invariant generics until the heat death
+of the universe.
 
-Why are programming langauges important? Why are they broken? What is
-our approach to fixing it?
+the research community on programming languages, imperfect as it is,
+has usually seen the worst of these disasters coming in
+advance. However, in the diffuse and surreally contentions community
+of programming languages research, attempts to understand errors and
+contain their worst damage of bad ideas seem tend only to solemnize
+their status as ``well-understood features of modern programming
+languages,'' ensuring their inclusion in the next great disaster.
+
+We propose a radically different strategy: we will save the future
+from our follies of today by setting our countenances towards
+discovering tomorrow's bad ideas and tasteless fads {\it first}. From a
+pure research perspective, this is the ultimate folly, not that that's
+ever stopped us before
+\cite{sigbovik07,sigbovik08,sigbovik09,sigbovik10,sigbovik11}. But the
+stakes are too high to keep our hands clean. It's time to bring out
+the big guns, and put our bad ideas to work in the (regulatory)
+marketplace.
 
 \subsection{Primer on patent law}
 
@@ -102,7 +122,8 @@ invention be a trade secret rather than a patented invention.
 
 That, at least, is the civics book lesson for how patents work, but the
 patent system has had some difficulties coping with the complex nature
-technological innovation in the modern world. 
+technological innovation in the modern world. We will briefly describe
+two phenomena\cite{dododododod}
 
 \subsubsection{Unreasonable and non-discriminatory terms}
 
@@ -113,12 +134,12 @@ owned by those organizations that pertain to the standard.
 
 To see why this is important, consider a standards body with
 representatives from 57 companies all working on a new standard for
-Carrier Pidgeon Message Formatting modernizing RFC 1149. BBN Labs has
+Carrier Pigeon Message Formatting modernizing RFC 1149. BBN Labs has
 a new patent on avian foot massage technology \cite{ebert}, and without
 revealing this fact to the consortium they incorporate the requirement
 to 
 
-\subsection{Base coat on patent trolls}
+\subsubsection{Patent trolls}
 
 - different levels of patent from rock solid to pure troll-threats
 
@@ -183,7 +204,7 @@ ideas that we came up with, no sweat. Cringe away:
      \item \ldots rule
      \item \ldots exception, except exceptions; those are normal
      \item \ldots arbitrary-precision rational number
-     \item \ldots priority queue, fibonacci heap, b-tree, pixel, regular expression, presheaf, commutative diagram, metaphor, monad
+     \item \ldots priority queue, Fibonacci heap, b-tree, pixel, regular expression, presheaf, commutative diagram, metaphor, monad
      \item \ldots MP3
      \item \ldots SMS
      \item \ldots mutex
@@ -222,7 +243,7 @@ ideas that we came up with, no sweat. Cringe away:
 \end{enumerate}
 
 You see how easy this is? If you are a programming language expert you
-might even have thought of some langauges that already use these
+might even have thought of some languages that already use these
 ideas. If so, {\it this is all the more reason to support our
   foundation}, because had we started earlier, we could have saved the
 world some trouble!
@@ -306,13 +327,13 @@ in standards, but require that the patent holder provide {\bf
   R}easonable {\bf a}nd {\bf N}on-{\bf D}iscriminatory licensing
 options. This is to ensure that anyone can implement the standard, by
 paying a fair licensing fee to the patent holder until the patent
-expries, and is generally good for technology.
+expires, and is generally good for technology.
 
 The /dev/urand Foundation differs in that its licensing is {\bf
   U}n{\bf r}easonable {\bf a}nd {\bf N}ot-not {\bf D}iscriminatory: We
 do not offer licenses for any amount of money or other consideration.
 Our patents on bad ideas will simply never be licensed, enjoining
-anyone from using those ideas. Our overbroad patents will be licensed
+anyone from using those ideas. Our over-broad patents will be licensed
 in a blatantly discriminatory fashion, only to languages that we think
 are tasteful. We might even withhold licenses when an individual has
 done something that we just don't like, like has a name that's hard to
@@ -339,12 +360,53 @@ The future of programming depends on it!
 
 \begin{thebibliography}{1}
 
+\bibitem{sigbovik11}
+Blum, Benjamin (ed).
+\newblock ``Proceedings of SIGBOVIK 2011.''
+\newblock ACH Press.
+\newblock Pittsburgh, Pennsylvania.
+\newblock 2011.
+
+\bibitem{dododododod}
+Do do dododo. 
+\newblock ``Phenomena.''
+\newblock Do do do do. 
+\newblock ``Phenomena.'' 
+\newblock Do do dododo dododo dododo dododododo do do do do do.
 
 \bibitem{ebert}
 Ebert, Michael A.
 \newblock ``Corrugated recreational device for pets.''
 \newblock Patent Application 11/757,456.
 \newblock Filed June 4, 2007.
+
+\bibitem{sigbovik09}
+Jones, Laurie A (ed).
+\newblock ``Proceedings of SIGBOVIK 2009.''
+\newblock ACH Press.
+\newblock Pittsburgh, Pennsylvania.
+\newblock 2009.
+
+\bibitem{sigbovik07}
+Leffert, Akiva and Jason Reed (eds).
+\newblock ``Proceedings of SIGBOVIK 2007.''
+\newblock ACH Press.
+\newblock Pittsburgh, Pennsylvania.
+\newblock 2007.
+
+\bibitem{sigbovik10}
+Martens, Chris (ed).
+\newblock ``Proceedings of SIGBOVIK 2010.''
+\newblock ACH Press.
+\newblock Pittsburgh, Pennsylvania.
+\newblock 2010.
+
+\bibitem{sigbovik08}
+Simmons, Robert J. (ed).
+\newblock ``Proceedings of SIGBOVIK 2008.''
+\newblock ACH Press.
+\newblock Pittsburgh, Pennsylvania.
+\newblock 2008.
 
 \bibitem{simmons10}
 Simmons, Robert J., Nels E. Beckman, and Dr. Tom Murphy VII, Ph.D.
