Move shit around everywhere

--- a/urand.tex
+++ b/urand.tex
@@ -70,7 +70,7 @@ you are wrong, but nevertheless you should mourn that we will
 seriously be stuck with Java's invariant generics until the heat death
 of the universe.
 
-the research community on programming languages, imperfect as it is,
+The research community on programming languages, imperfect as it is,
 has usually seen the worst of these disasters coming in
 advance. However, in the diffuse and surreally contentions community
 of programming languages research, attempts to understand errors and
@@ -120,12 +120,17 @@ your awesome secret a secret for more than 20 years, then it's to your
 advantage as an inventor {\it not} to make this trade, and have your
 invention be a trade secret rather than a patented invention.
 
-That, at least, is the civics book lesson for how patents work, but the
-patent system has had some difficulties coping with the complex nature
-technological innovation in the modern world. We will briefly describe
-two phenomena\cite{dododododod}
+That, at least, is the civics book lesson for how patents work, but
+the patent system has had some difficulties coping with the complex
+nature technological innovation in the modern world. We will briefly
+describe two phenomena \cite{dododododod} that have arisen around
+patent law in the context of modern information technology: the
+standardization of {\it reasonable and non-discriminatory} licensing
+terms, and the scourge of {\it patent trolls}. Both of these phenomena
+\cite{dododododod} are relevant to our method and apparatus for saving
+the world, {\tt The /dev/urand/ Foundation}, described in Section 3.
 
-\subsubsection{Unreasonable and non-discriminatory terms}
+\subsubsection{Reasonable and non-discriminatory terms}
 
 Standards bodies require member organizations to adhere to the mostly
 ill-defined requirement of using {\it reasonable and
@@ -143,12 +148,10 @@ to
 
 - different levels of patent from rock solid to pure troll-threats
 
-We are going up against some of the biggest companies in the world, such as Larry Wall and Guido van Rossum.
+\subsection{The chillaxing effect}
 
-\subsubsection{The chillaxing effect}
-
-\subsection{Shellac on lost opportunities}
-
+Our method and apparatus for saving the world was inspired by
+(cite twitter)
 
 Examples of history: SIGBOVIK/Milner idea
 
@@ -346,8 +349,11 @@ for the programming language ecosystem, which we can all agree is
 % Rob: some kind of pun here instead?
 pretty much up shit's creek without a paddle.
 
+We are going up against some of the biggest companies in the world,
+such as Larry Wall and Guido van Rossum.
 
-\section{Lawsuits are coming}
+
+\subsection{Lawsuits are coming}
 
 languages that we are coming after
 
