--- a/urand.tex
+++ b/urand.tex
@@ -139,14 +139,35 @@ owned by those organizations that pertain to the standard.
 
 To see why this is important, consider a standards body with
 representatives from 57 companies all working on a new standard for
-Carrier Pigeon Message Formatting modernizing RFC 1149. BBN Labs has
-a new patent on avian foot massage technology \cite{ebert}, and without
-revealing this fact to the consortium they incorporate the requirement
-to 
+Carrier Pigeon Message Formatting modernizing RFC 1149. BBN Labs has a
+new patent on avian foot massage technology using cardboard
+\cite{ebert}. Without revealing this fact to the consortium, BBN Labs
+influences the standards body to incorporate the requirement for
+post-packet-delivery corrugated massage as a quality assurance
+mechanism. Then, after waiting for the standard to be incorporated
+into every soda machine in America, BBN Labs can demand arbitrary fees
+from the users and distributors of their massage-enhanced pigeon
+packet technology. If people refuse to pay, they can be legally barred
+from using the (standards-backed) technology they have already bought
+and paid for.
+
+RAND licensing is aimed at avoiding this scenario. When
+RAND terms are required, then BBN Labs still has something to gain
+from the adoption of their patented technology in the standard, but
+they have less to gain from concealing this from their standards-body
+partners. RAND is not a solution to patent-encumbered standards,
+merely a way to make them work in the real world. But, critically,
+RAND licensing is not itself a fundamental part of patent law -- if
+BBN Labs are {\it not} a part of the standards committee, then they can
+still wield their patents despite the standards committee members
+being bound by RAND terms when it comes to their own patented
+inventions. 
 
 \subsubsection{Patent trolls}
 
 - different levels of patent from rock solid to pure troll-threats
+
+Patent trolling is 
 
 \subsection{The chillaxing effect}
 
